--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     ],
     "require": {
         "php": "^7.4",
-        "illuminate/http": "^6.4",
+        "illuminate/http": "^6.4|^7.0",
         "orchestra/testbench": "^4.3",
         "spatie/laravel-mailcoach": "^1.1",
         "spatie/laravel-webhook-client": "^2.2"
