--- a/composer.json
+++ b/composer.json
@@ -22,17 +22,17 @@
     ],
     "require": {
         "php": "^7.4",
-        "illuminate/http": "^6.4",
-        "orchestra/testbench": "^4.3",
-        "spatie/laravel-mailcoach": "^1.1",
+        "illuminate/http": "^7.0",
+        "orchestra/testbench": "^5.0",
+        "spatie/laravel-mailcoach": "^2.0",
         "spatie/laravel-webhook-client": "^2.2"
     },
     "require-dev": {
         "ext-json": "*",
         "fzaninotto/faker": "^1.9",
         "friendsofphp/php-cs-fixer": "^2.16",
-        "orchestra/testbench": "^4.5",
-        "symfony/var-dumper": "^4.3|^5.0"
+        "orchestra/testbench": "^5.0",
+        "symfony/var-dumper": "^5.0"
     },
     "autoload": {
         "psr-4": {
@@ -57,5 +57,7 @@
                 "Spatie\\MailcoachSendgridFeedback\\MailcoachSendgridFeedbackServiceProvider"
             ]
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
