--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
     "repositories": [
         {
             "type": "composer",
-            "url": "https://satis.mailcoach.app"
+            "url": "https://satis.spatie.be"
         }
     ],
     "require": {
         "php": "^7.4",
         "illuminate/http": "^7.0",
-        "orchestra/testbench": "^5.0",
+        "orchestra/testbench": "^5.0|^6.0",
         "spatie/laravel-mailcoach": "^2.9",
         "spatie/laravel-webhook-client": "^2.2"
     },
@@ -31,7 +31,7 @@
         "ext-json": "*",
         "fzaninotto/faker": "^1.9",
         "friendsofphp/php-cs-fixer": "^2.16",
-        "orchestra/testbench": "^5.0",
+        "orchestra/testbench": "^5.0|^6.0",
         "symfony/var-dumper": "^5.0"
     },
     "autoload": {
@@ -46,7 +46,8 @@
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
+        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
     },
     "config": {
         "sort-packages": true
