--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     ],
     "require": {
         "php": "^7.4",
-        "illuminate/http": "^7.0",
+        "illuminate/http": "^7.0|^8.0",
         "orchestra/testbench": "^5.0|^6.0",
         "spatie/laravel-mailcoach": "^2.9",
         "spatie/laravel-webhook-client": "^2.2"
