--- a/composer.json
+++ b/composer.json
@@ -21,18 +21,18 @@
         }
     ],
     "require": {
-        "php": "^7.4",
-        "illuminate/http": "^7.0|^8.0",
-        "orchestra/testbench": "^5.0|^6.0",
-        "spatie/laravel-mailcoach": "^2.9|^3.0",
-        "spatie/laravel-webhook-client": "^2.2"
+        "php": "^8.0",
+        "illuminate/http": "^8.0",
+        "orchestra/testbench": "^6.0",
+        "spatie/laravel-mailcoach": "^4.0",
+        "spatie/laravel-webhook-client": "^2.7"
     },
     "require-dev": {
         "ext-json": "*",
         "friendsofphp/php-cs-fixer": "^2.16",
-        "fzaninotto/faker": "^1.9",
+        "fakerphp/faker": "^1.9",
         "laravel/legacy-factories": "^1.0.4",
-        "orchestra/testbench": "^5.0|^6.0",
+        "orchestra/testbench": "^6.0",
         "symfony/var-dumper": "^5.0"
     },
     "autoload": {
