--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "php": "^7.4",
+        "php": "^7.4|^8.0",
         "illuminate/http": "^7.0|^8.0",
         "orchestra/testbench": "^5.0|^6.0",
         "spatie/laravel-mailcoach": "^2.9|^3.0",
