--- a/composer.json
+++ b/composer.json
@@ -22,16 +22,12 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/http": "^8.0",
-        "orchestra/testbench": "^6.0",
-        "spatie/laravel-mailcoach": "^4.0",
-        "spatie/laravel-webhook-client": "^2.7"
+        "spatie/laravel-mailcoach": "^4.0"
     },
     "require-dev": {
         "ext-json": "*",
         "friendsofphp/php-cs-fixer": "^2.16",
         "fakerphp/faker": "^1.9",
-        "laravel/legacy-factories": "^1.0.4",
         "orchestra/testbench": "^6.0",
         "symfony/var-dumper": "^5.0"
     },
@@ -42,7 +38,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Spatie\\MailcoachSendgridFeedback\\Tests\\": "tests"
+            "Spatie\\MailcoachSendgridFeedback\\Tests\\": "tests",
+            "Spatie\\Mailcoach\\Database\\Factories\\": "vendor/spatie/laravel-mailcoach/database/factories"
         }
     },
     "scripts": {
