--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,7 +8,7 @@ jobs:
         strategy:
             matrix:
                 os: [ubuntu-latest]
-                php: [8.0]
+                php: [8.1, 8.0]
                 laravel: [8.*]
                 dependency-version: [prefer-lowest, prefer-stable]
                 include:
