--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     ],
     "require": {
         "php": "^8.0",
+        "illuminate/support": "^8.67",
         "spatie/laravel-mailcoach": "^4.0"
     },
     "require-dev": {
