--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "friendsofphp/php-cs-fixer": "^2.16",
         "fakerphp/faker": "^1.9",
         "orchestra/testbench": "^6.0",
+        "phpunit/phpunit": "^8.5.21|^9.4.4",
         "symfony/var-dumper": "^5.0"
     },
     "autoload": {
