--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,14 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.0",
         "illuminate/support": "^9.0",
         "symfony/sendgrid-mailer": "^6.0",
-        "spatie/laravel-mailcoach": "^6.0"
+        "spatie/laravel-mailcoach": "^5.2"
     },
     "require-dev": {
         "ext-json": "*",
+        "friendsofphp/php-cs-fixer": "^2.16",
         "fakerphp/faker": "^1.12",
         "orchestra/testbench": "^7.0",
         "phpunit/phpunit": "^9.5",
